--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 26
     buildToolsVersion "26.0.0"
     defaultConfig {
-        applicationId "delfi.com.vn.newsample"
+        applicationId "dk.delfi.android.client"
         minSdkVersion 15
         targetSdkVersion 26
         versionCode 1
@@ -26,6 +26,6 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.github.tpalwayscreative:delfilibraries:2.3'
+    compile 'com.github.tpalwayscreative:delfilibraries:2.4'
     testCompile 'junit:junit:4.12'
 }
