--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,15 +9,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.login.activity.SignUpMainActivity">
+        <activity android:name=".ui.signup.SignUpMainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.gridview.activity.GridViewActivity" />
-        <activity android:name=".ui.recyclerview.activity.RecyclerViewActivity"></activity>
+        <activity android:name=".ui.gridview.GridViewActivity" />
+        <activity android:name=".ui.recyclerview.RecyclerViewActivity"></activity>
 
     </application>
 
